<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012-2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Advanced settings</string>

    <string name="defaults_button">Reset to default</string>

    <!-- Haptic Preference -->
    <string name="category_haptic_title">Haptic</string>

    <!-- VibratorTuning -->
    <string name="vibrator_title">Vibrator</string>
    <string name="vibrator_tuning_title">Vibration strength</string>
    <string name="vibrator_tuning_summary_head">Adjust the strength of the vibration feedback</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>

    <!-- Touchscreen Preference -->
    <string name="category_touchscreen_title">Touchscreen</string>
    <string name="logo2menu_title">Logo To Menu</string>
    <string name="logo2menu_switch_title_head">Enable</string>
    <string name="logo2menu_switch_summary_head">Enables the HTC logo\'s upper part to act as hardware Menu button.</string>
    <string name="longtaplogosleep_switch_title_head">Longtap Sleep</string>
    <string name="longtaplogosleep_switch_summary_head">If checked, long tapping the HTC logo\'s upper part will put the phone to sleep. If checked, it overrides System/Hardware Keys - Menu button long tap setting.</string>

    <string name="wake_title">Wake</string>
    <string name="wake_method_title_head">Wake Method</string>
    <string name="wake_method_summary_head">Select which touchpad wake method you prefer to use.</string>

    <!-- Sensors Preference -->
    <string name="category_sensors_title">Sensors</string>

    <!-- Proximity Calibration -->
    <string name="proximity_subcat_title">Proximity</string>
    <string name="proximity_calibration_title">Calibration</string>
    <string name="proximity_calibration_summary">Set the calibration value. Higher values mean less sensitivity.</string>
    <string name="pocketdetection_title">Pocket wake protection</string>
    <string name="pocketdetection_summary_head">Pocket detection method</string>
    <string name="pocketdetection_summary">Select which pocket detection method you prefer to use.</string>
    <string name="flick_pick_title">Flick/Pick2Wake</string>
    <string name="flick2wake_summary_head">Flick2Wake</string>
    <string name="flick2wake_summary">Flick the phone, with a good strength, and the screen will turn on.</string>
    <string name="flick2sleep_summary_head">Flick2Sleep</string>
    <string name="flick2sleep_summary">Flick the phone, with a good strength, and the screen will turn off.</string>
    <string name="f2w_sensitivity_summary_head">Flick sensitivity</string>
    <string name="f2w_sensitivity_summary">Select which flick sensitivity method you prefer to use.</string>
    <string name="pick2wake_summary_head">Pick2Wake</string>
    <string name="pick2wake_summary">Pick the phone to vertical position and the screen will turn on. It drains more battery with this option.</string>
    <string name="f2s_time_out_summary_head">Sleep timeout before F2W</string>
    <string name="f2s_time_out_summary">Set the time for what the phone should wait after a F2S, before letting it react on F2W attempt.</string>
    
    <!-- Button Lights -->
    <string name="category_buttonlight_title">Button Lights</string>
    <string name="buttonlightnotification_title">Backlight</string>
    <string name="buttonlightnotification_summary_head">Enable BLN</string>
    <string name="buttonlightnotification_summary">Select to enable the capacitive button backlight for notification events.</string>
    <string name="backlight_title_head">Disable Button Backlight</string>
    <string name="backlight_summary_head">Select to disable the capacitive button backlight.</string>

    <!-- Misc -->
    <string name="category_misc_title">Misc</string>

    <!-- Fast Charge -->
    <string name="fastcharge_title">Fast Charge</string>
    <string name="fastcharge_summary_head">Enable</string>
    <string name="fastcharge_summary">Enable to draw more power when connected to a PC USB port.</string>

    <!-- Performance -->
    <string name="category_performance_title">Performance</string>
    <string name="gpu_title">GPU</string>
    <string name="gpuoc_summary_head">GPU frequency</string>
    <string name="gpuoc_summary">Set desired GPU frequency that will be set on boot.</string>
</resources>
